cleaned up files

--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,22 @@
   </head>
   <body>
 
-      <h3>Select function</h3>
 
+   <div class="container">
+
+
+      <h3>Select function</h3>
         <input type="radio" class ="add"id="doThis" name="mathType" value="+"><label-for="add">Add</label><br />
         <input type="radio" class = "subtract"id="doThis" name="mathType" value="-"><label-for="subtract">Subtract</label><br />
         <input type="radio" class = "multiply"id="doThis" name="mathType" value="*"><label-for="multiply">Multiply</label><br />
         <input type="radio" class = "divide" id="doThis"  name="mathType" value="/"><label-for="divide">Divide</label><br />
-          <h3>Enter values here</h3>
+      <h3>Enter values here</h3>
         <input type="text" id = "x" name="firstNumberIn" placeholder="Value 1" value="">
         <div id="sign"></div>
         <input type="text" id="y"name="secondNumberIn" placeholder="Value 2" value="">
         <input type="submit" value="Submit" id = "sendInfo">
-
-    <div id = "outputDiv"></div>
+        <button id = "reset">Reset</button>
+   </div>
+    <div class = "container" id = "outputDiv"></div>
   </body>
 </html>
