--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Calculator</title>
     <link rel="stylesheet" href="./bootstrap.css">
+    <link rel="stylesheet" href="./styles.css" media="screen" title="no title" charset="utf-8">
     <script src="./jquery.min.js" charset="utf-8"></script>
     <script src="./fe-app.js" charset="utf-8"></script>
 
@@ -11,21 +12,19 @@
   <body>
 
 
-   <div class="container">
-
-
-      <h3>Select function</h3>
-        <input type="radio" class ="add"id="doThis" name="mathType" value="+"><label-for="add">Add</label><br />
-        <input type="radio" class = "subtract"id="doThis" name="mathType" value="-"><label-for="subtract">Subtract</label><br />
-        <input type="radio" class = "multiply"id="doThis" name="mathType" value="*"><label-for="multiply">Multiply</label><br />
-        <input type="radio" class = "divide" id="doThis"  name="mathType" value="/"><label-for="divide">Divide</label><br />
-      <h3>Enter values here</h3>
-        <input type="text" id = "x" name="firstNumberIn" placeholder="Value 1" value="">
-        <div id="sign"></div>
-        <input type="text" id="y"name="secondNumberIn" placeholder="Value 2" value="">
-        <input type="submit" value="Submit" id = "sendInfo">
-        <button id = "reset">Reset</button>
-   </div>
-    <div class = "container" id = "outputDiv"></div>
+         <div class="container">
+            <h3>Select function</h3>
+              <input type="radio" class ="add"id="doThis" name="mathType" value="+"><label-for="add">Add</label><br />
+              <input type="radio" class = "subtract"id="doThis" name="mathType" value="-"><label-for="subtract">Subtract</label><br />
+              <input type="radio" class = "multiply"id="doThis" name="mathType" value="*"><label-for="multiply">Multiply</label><br />
+              <input type="radio" class = "divide" id="doThis"  name="mathType" value="/"><label-for="divide">Divide</label><br />
+            <h3>Enter values here</h3>
+              <input type="text" id = "x" name="firstNumberIn" placeholder="Value 1" value="">
+              <div id="sign"></div>
+              <input type="text" id="y" name="secondNumberIn" placeholder="Value 2" value="">
+              <input type="submit" value="Submit" id = "sendInfo">
+              <button id = "reset">Reset</button>
+         </div>
+        <div class = "container" id = "outputDiv"></div>
   </body>
 </html>
