added checks for blank fields/radio buttons

--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,14 @@
 
          <div class="container">
             <h3>Select function</h3>
-              <input type="radio" class ="add"id="doThis" name="mathType" value="+"><label-for="add"> Add</label><br />
-              <input type="radio" class = "subtract"id="doThis" name="mathType" value="-"><label-for="subtract"> Subtract</label><br />
-              <input type="radio" class = "multiply"id="doThis" name="mathType" value="*"><label-for="multiply"> Multiply</label><br />
-              <input type="radio" class = "divide" id="doThis"  name="mathType" value="/"><label-for="divide"> Divide</label><br />
+              <input type="radio" class ="add"id="add" name="mathType" value="+" checked = "checked"><label-for="add"> Add</label><br />
+              <input type="radio" class = "subtract"id="subtract" name="mathType" value="-"><label-for="subtract"> Subtract</label><br />
+              <input type="radio" class = "multiply"id="multiply" name="mathType" value="*"><label-for="multiply"> Multiply</label><br />
+              <input type="radio" class = "divide" id="divide"  name="mathType" value="/"><label-for="divide"> Divide</label><br />
             <h3>Enter values here</h3>
-              <input type="text" id = "x" name="firstNumberIn" placeholder="Value 1" value="">
+              <input type="number" id = "x" name="firstNumberIn" placeholder="Value 1" value="">
               <div id="sign"></div>
-              <input type="text" id="y" name="secondNumberIn" placeholder="Value 2" value="">
+              <input type="number" id="y" name="secondNumberIn" placeholder="Value 2" value="">
               <input type="submit" value="Submit" id = "sendInfo">
               <button id = "reset">Reset</button>
          </div>
